Changes pages to Apply in nav bar

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        pages
+                                        Apply
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="single-blog.html">Single blog</a>
-                                        <a class="dropdown-item" href="elements.html">Elements</a>
+                                        <a class="dropdown-item" href="single-blog.html">Hacker</a>
+                                        <a class="dropdown-item" href="elements.html">Mentor</a>
                                     </div>
                                 </li>
                                 <li class="nav-item">
