Reformat homepage, move About section above

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                     <a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="about.html">About</a>
+                                    <a class="nav-link" href="#about">About</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -79,7 +79,7 @@
                         <div class="banner_text_iner text-center">
                             <h2>vhHacks <span>2020</span> </h2>
                             <h3>March 14-15</h3>
-                            <a href="#read-on" class="btn_1">Learn more<i class="ti-angle-right"></i> </a>
+                            <a href="#about" class="btn_1">Learn more<i class="ti-angle-right"></i> </a>
                         </div>
                     </div>
                 </div>
@@ -98,24 +98,64 @@
     <!-- banner part start-->
 
     <!-- cta part start-->
-    <section class="cta_part" id="read-on">
-        <div class="container">
-            <div class="row align-items-center">
+    <section class="our_latest_work section_padding" id="about">
+        <div class="container-fluid">
+            <div class="row">
                 <div class="col-lg-12">
-                    <div class="cta_part_iner">
-                        <div class="cta_part_text">
-                            <p> Our Features</p>
-                            <h1>Building brands with purpose</h1>
+                    <div class="single_work">
+                        <div class="row align-items-center">
+                            <div class="offset-lg-1 col-lg-6 col-md-6">
+                                <div class="single_work_demo">
+                                    <h5>About Us</h5>
+                                    <h3>What is vhHacks?</h3>
+                                    <p>Place isn't heaven firmament divided shall fruitful bring bring may midst
+                                        every a night dry herb. Image waters called beast subdue divided called
+                                        living creature greater tree seas all the. Hath multiply female you're
+                                        male likeness his made open beast seas living moved, form.
+                                        Void stars you our dominion </p>
+                                </div>
+                            </div>
+                            <div class = "offset-lg-1 col-lg-4 col-md-6">
+                                <div class="demo_img">
+                                    <img src="img/vhHacksglow.png" alt="vhHacks">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- cta part end-->
 
-    <!-- service_part part start-->
-    <section class="service_part section_bg_2 section_padding">
+    <!-- happy_client counter start -->
+    <section class="happy_client service_part section_bg_2">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-sm-6">
+                    <div class="single_happy_client">
+                        <img src="img/icon/cap.svg" alt="cap">
+                        <span class="counter">150</span>
+                        <h4>Student <br> Hackers</h4>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="single_happy_client">
+                        <img src="img/icon/bag.svg" alt="cap">
+                        <span class="counter">24</span>
+                        <h4> Hours</h4>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="single_happy_client">
+                        <img src="img/icon/shirt.svg" alt="cap">
+                        <span class="counter">75</span>
+                        <h4>work<br>completed</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class = "service_part section_bg_2">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-sm-6">
@@ -278,43 +318,6 @@
         </div>
     </section>
     <!-- upcoming_event part start-->
-
-    <!-- happy_client counter start -->
-    <section class="happy_client">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-sm-6">
-                    <div class="single_happy_client">
-                        <img src="img/icon/cap.svg" alt="cap">
-                        <span class="counter">85</span>
-                        <h4>Satisfied <br>client</h4>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="single_happy_client">
-                        <img src="img/icon/bag.svg" alt="cap">
-                        <span class="counter">95</span>
-                        <h4> Total<br>project</h4>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="single_happy_client">
-                        <img src="img/icon/shirt.svg" alt="cap">
-                        <span class="counter">75</span>
-                        <h4>work<br>completed</h4>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="single_happy_client">
-                        <img src="img/icon/cafe.svg" alt="cap">
-                        <span class="counter">95</span>
-                        <h4>work<br>completed</h4>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- happy_client counter end -->
 
     <!--::review_part start::-->
     <section class="review_part padding_top">
