Change background colour to match theme, resize about text, recolour img

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <!-- banner part start-->
 
     <!-- cta part start-->
-    <section class="our_latest_work section_padding" id="about">
+    <section class="our_latest_work section_bg_2" id="about">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
@@ -108,7 +108,7 @@
                                 <div class="single_work_demo">
                                     <h5>About Us</h5>
                                     <h3>What is vhHacks?</h3>
-                                    <p>Place isn't heaven firmament divided shall fruitful bring bring may midst
+                                    <p class = "about-home-text">Place isn't heaven firmament divided shall fruitful bring bring may midst
                                         every a night dry herb. Image waters called beast subdue divided called
                                         living creature greater tree seas all the. Hath multiply female you're
                                         male likeness his made open beast seas living moved, form.
