--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </div>
         </div>
     </section>
-    <section class = "service_part section_bg_2">
+    <section class = "service_part section_padding">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-sm-6">
