Move team members to about section. Add "see more" button

--- a/index.html
+++ b/index.html
@@ -155,6 +155,58 @@
             </div>
         </div>
     </section>
+
+    <!-- team_member part start-->
+    <section class="team_member_section section_padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-sm-6">
+                    <div class="single_team_member">
+                        <img src="img/team/team_1.png" alt="">
+                        <div class="single_team_text">
+                            <h3><a href="#"> Jhosef Williams</a></h3>
+                            <p>Web developer</p>
+                            <div class="team_member_social_icon">
+                                <a href="#">facebok</a>
+                                <a href="#">twitter</a>
+                                <a href="#">skype</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="single_team_member">
+                        <img src="img/team/team_2.png" alt="">
+                        <div class="single_team_text">
+                            <h3><a href="#">Daniel Hancock</a></h3>
+                            <p>Web developer</p>
+                            <div class="team_member_social_icon">
+                                <a href="#">facebok</a>
+                                <a href="#">twitter</a>
+                                <a href="#">skype</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="single_team_member">
+                        <img src="img/team/team_3.png" alt="">
+                        <div class="single_team_text">
+                            <h3><a href="#">Bernard Perales</a></h3>
+                            <p>Web developer</p>
+                            <div class="team_member_social_icon">
+                                <a href="#">facebok</a>
+                                <a href="#">twitter</a>
+                                <a href="#">skype</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <a href="#about" class="btn_1">See the rest<i class="ti-angle-right"></i> </a>
+            </div>
+        </div>
+    </section>
+    <!-- team_member part end-->
     <section class = "service_part section_padding">
         <div class="container">
             <div class="row">
@@ -585,57 +637,6 @@
         </div>
     </section>
     <!-- cta part end-->
-    <!-- team_member part start-->
-    <section class="team_member_section section_padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-sm-6">
-                    <div class="single_team_member">
-                        <img src="img/team/team_1.png" alt="">
-                        <div class="single_team_text">
-                            <h3><a href="#"> Jhosef Williams</a></h3>
-                            <p>Web developer</p>
-                            <div class="team_member_social_icon">
-                                <a href="#">facebok</a>
-                                <a href="#">twitter</a>
-                                <a href="#">skype</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="single_team_member">
-                        <img src="img/team/team_2.png" alt="">
-                        <div class="single_team_text">
-                            <h3><a href="#">Daniel Hancock</a></h3>
-                            <p>Web developer</p>
-                            <div class="team_member_social_icon">
-                                <a href="#">facebok</a>
-                                <a href="#">twitter</a>
-                                <a href="#">skype</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <div class="single_team_member">
-                        <img src="img/team/team_3.png" alt="">
-                        <div class="single_team_text">
-                            <h3><a href="#">Bernard Perales</a></h3>
-                            <p>Web developer</p>
-                            <div class="team_member_social_icon">
-                                <a href="#">facebok</a>
-                                <a href="#">twitter</a>
-                                <a href="#">skype</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-    <!-- team_member part end-->
 
     <!--::blog_part start::-->
     <section class="blog_part section_padding">
@@ -643,8 +644,7 @@
             <div class="row justify-content-center">
                 <div class="col-xl-5">
                     <div class="section_tittle text-center">
-                        <p>Latest news</p>
-                        <h2>We Have True Story</h2>
+                        <h2>FAQ</h2>
                     </div>
                 </div>
             </div>
@@ -652,7 +652,6 @@
                 <div class="col-sm-6 col-lg-4 col-xl-4 d-none d-sm-block d-lg-none">
                     <div class="single-home-blog">
                         <div class="card">
-                            <img src="img/blog/blog_3.png" class="card-img-top" alt="blog">
                             <div class="card-body">
                                 <a href="blog.html">Art, design</a> | <span> March 30, 2019</span>
                                 <a href="blog.html">
@@ -669,7 +668,6 @@
                 <div class="col-sm-6 col-lg-4 col-xl-4">
                     <div class="single-home-blog">
                         <div class="card">
-                            <img src="img/blog/blog_1.png" class="card-img-top" alt="blog">
                             <div class="card-body">
                                 <a href="blog.html">Technology</a> | <span> March 30, 2019</span>
                                 <a href="blog.html">
@@ -686,7 +684,6 @@
                 <div class="col-sm-6 col-lg-4 col-xl-4">
                     <div class="single-home-blog">
                         <div class="card">
-                            <img src="img/blog/blog_2.png" class="card-img-top" alt="blog">
                             <div class="card-body">
                                 <a href="blog.html">Technology</a> | <span> March 30, 2019</span>
                                 <a href="blog.html">
@@ -704,7 +701,6 @@
                 <div class="col-sm-6 col-lg-4 col-xl-4">
                     <div class="single-home-blog">
                         <div class="card">
-                            <img src="img/blog/blog_3.png" class="card-img-top" alt="blog">
                             <div class="card-body">
                                 <a href="blog.html">Technology</a> | <span> March 30, 2019</span>
                                 <a href="blog.html">
