Change About Redirect

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#about" class="btn_1">See the rest<i class="ti-angle-right"></i> </a>
+                <a href="about.html" class="btn_1">See the rest<i class="ti-angle-right"></i> </a>
             </div>
         </div>
     </section>
