--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"> </a>
+                        <a class="navbar-brand" href="#home"> <img src="img/logo.png" alt="logo"> </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,7 @@
                             id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Home</a>
+                                    <a class="nav-link" href="#home">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#about">About</a>
@@ -59,6 +59,9 @@
                                     </div>
                                 </li>
                                 <li class="nav-item">
+                                    <a class="nav-link" href="#faq">FAQ</a>
+                                </li>
+                                <li class="nav-item">
                                     <a class="nav-link" href="contact.html">Contact</a>
                                 </li>
                             </ul>
@@ -71,7 +74,7 @@
     <!-- Header part end-->
 
     <!-- banner part start-->
-    <section class="banner_part">
+    <section class="banner_part" id = "home">
         <div class="container">
             <div class="row align-items-center justify-content-between">
                 <div class="col-xl-6 col-md-6">
@@ -621,25 +624,8 @@
 
     <!-- portfolio_part start-->
 
-    <!-- cta part start-->
-    <section class="cta_part">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-12">
-                    <div class="cta_part_iner">
-                        <div class="cta_part_text">
-                            <p>recent work</p>
-                            <h2>Creative work for client</h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- cta part end-->
-
     <!--::blog_part start::-->
-    <section class="blog_part section_padding">
+    <section class="blog_part section_padding" id = "faq">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-5">
@@ -649,67 +635,97 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6 col-lg-4 col-xl-4 d-none d-sm-block d-lg-none">
+                <div class="col-sm-6 col-lg-4 col-xl-4">
                     <div class="single-home-blog">
-                        <div class="card">
+                        <div class="card shadow">
                             <div class="card-body">
-                                <a href="blog.html">Art, design</a> | <span> March 30, 2019</span>
-                                <a href="blog.html">
-                                    <h5 class="card-title">Seasons form upon days may wont bring given herb sixth</h5>
+                                <a href="blog.html" class = "dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <h5 class="card-title">What is a hackathon?</h5>
                                 </a>
-                                <ul>
-                                    <li> <i class="ti-comments"></i>4 Comments</li>
-                                    <li> <i class="ti-eye"></i>10 View</li>
-                                </ul>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <p class = "dropdown-item">A hackathon is a place where you and hundreds of other people learn, build, and create new technologies <br>
+                                        over the course of one weekend! Hackathons let you try learning a new skill, commit to that <br>
+                                        crazy idea you've never had time for, or make new friendships and strengthen old ones.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-4">
                     <div class="single-home-blog">
-                        <div class="card">
+                        <div class="card shadow">
                             <div class="card-body">
-                                <a href="blog.html">Technology</a> | <span> March 30, 2019</span>
-                                <a href="blog.html">
-                                    <h5 class="card-title">Seasons form upon days may wont bring given herb sixth</h5>
+                                <a href="blog.html" class = "dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <h5 class="card-title">Who can attend?</h5>
                                 </a>
-                                <ul>
-                                    <li> <i class="ti-comments"></i>4 Comments</li>
-                                    <li> <i class="ti-eye"></i>10 View</li>
-                                </ul>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <p class = "dropdown-item col-lg-4">vhHacks is open primarily to, and structured for, high school or secondary students. <br>
+                                        However, if you're in middle school, or university, you are welcome to apply as well</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-4">
                     <div class="single-home-blog">
-                        <div class="card">
+                        <div class="card shadow">
                             <div class="card-body">
-                                <a href="blog.html">Technology</a> | <span> March 30, 2019</span>
-                                <a href="blog.html">
-                                    <h5 class="card-title">Very and third him beginning signs hath subdue make
-                                    </h5>
+                                <a href="blog.html" class = "dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <h5 class="card-title">What is a hackathon?</h5>
                                 </a>
-                                <ul>
-                                    <li> <i class="ti-comments"></i>4 Comments</li>
-                                    <li> <i class="ti-eye"></i>10 View</li>
-                                </ul>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <p class = "dropdown-item">A hackathon is a place where you and hundreds of other people learn, build, and create new technologies <br>
+                                        over the course of one weekend! Hackathons let you try learning a new skill, commit to that <br>
+                                        crazy idea you've never had time for, or make new friendships and strengthen old ones.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6 col-lg-4 col-xl-4">
                     <div class="single-home-blog">
-                        <div class="card">
+                        <div class="card shadow">
                             <div class="card-body">
-                                <a href="blog.html">Technology</a> | <span> March 30, 2019</span>
-                                <a href="blog.html">
-                                    <h5 class="card-title">Seasons form upon days may wont bring given herb sixth</h5>
+                                <a href="blog.html" class = "dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <h5 class="card-title">What is a hackathon?</h5>
                                 </a>
-                                <ul>
-                                    <li> <i class="ti-comments"></i>4 Comments</li>
-                                    <li> <i class="ti-eye"></i>10 View</li>
-                                </ul>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <p class = "dropdown-item">A hackathon is a place where you and hundreds of other people learn, build, and create new technologies <br>
+                                        over the course of one weekend! Hackathons let you try learning a new skill, commit to that <br>
+                                        crazy idea you've never had time for, or make new friendships and strengthen old ones.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-4">
+                    <div class="single-home-blog">
+                        <div class="card shadow">
+                            <div class="card-body">
+                                <a href="blog.html" class = "dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <h5 class="card-title">What is a hackathon?</h5>
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <p class = "dropdown-item">A hackathon is a place where you and hundreds of other people learn, build, and create new technologies <br>
+                                        over the course of one weekend! Hackathons let you try learning a new skill, commit to that <br>
+                                        crazy idea you've never had time for, or make new friendships and strengthen old ones.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-4">
+                    <div class="single-home-blog">
+                        <div class="card shadow">
+                            <div class="card-body">
+                                <a href="blog.html" class = "dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <h5 class="card-title">What is a hackathon?</h5>
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <p class = "dropdown-item">A hackathon is a place where you and hundreds of other people learn, build, and create new technologies <br>
+                                        over the course of one weekend! Hackathons let you try learning a new skill, commit to that <br>
+                                        crazy idea you've never had time for, or make new friendships and strengthen old ones.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
