Add mentor and hacker application boards. Reformat and recolour

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                                         Apply
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="single-blog.html">Hacker</a>
-                                        <a class="dropdown-item" href="elements.html">Mentor</a>
+                                        <a class="dropdown-item" href="#hacker">Hacker</a>
+                                        <a class="dropdown-item" href="#helper">Helper</a>
                                     </div>
                                 </li>
                                 <li class="nav-item">
@@ -205,13 +205,29 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class = "container">
+            <div class = "row">
                 <a href="about.html" class="btn_1">See the rest<i class="ti-angle-right"></i> </a>
             </div>
         </div>
     </section>
     <!-- team_member part end-->
-    <section class = "service_part section_padding">
+    <section class = "service_part our_latest_work padding_top" id = "apply">
         <div class="container">
+            <div class="row col-lg-12">
+                <div class="single_work apply">
+                    <h2>APPLY NOW!</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class = "service_part padding_top" id = "hacker">
+        <div class = "container">
+            <div class = "row justify-content-center">
+                <h3 class = "section_tittle text-lg-center">- HACKER -</h3>
+            </div>
             <div class="row">
                 <div class="col-lg-3 col-sm-6">
                     <div class="single_service_part">
@@ -225,7 +241,7 @@
                 </div>
                 <div class="col-lg-3 col-sm-6">
                     <div class="single_service_part">
-                        <div class="single_service_part_iner">
+                        <div class="single_service_part_iner hacker">
                             <span class="ti-layers"></span>
                             <h3>Quality Matters</h3>
                             <p>Creeping for female light yea that lesser cand evening
@@ -251,6 +267,46 @@
                             <h3>24/7 Service</h3>
                             <p>Creeping for female light yea that lesser cand evening
                                 heaven isn't bearing tree appear </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class = "service_part section_padding" id = "helper">
+        <div class = "container">
+            <div class = "row justify-content-center">
+                <h3 class = "section_tittle text-lg-center">- HELPER -</h3>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-sm-6">
+                    <div class="single_service_part">
+                        <div class="single_service_part_iner">
+                            <span class="ti-mobile"></span>
+                            <h3>Mentor</h3>
+                            <p>Creeping for female light yea that lesser cand evening
+                                heaven isn't bearing tree appear </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="single_service_part">
+                        <div class="single_service_part_iner">
+                            <span class="ti-layers"></span>
+                            <h3>Volunteer</h3>
+                            <p>Creeping for female light yea that lesser cand evening
+                                heaven isn't bearing tree appear </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="single_service_part">
+                        <div class="single_service_part_iner">
+                            <span class="ti-lock"></span>
+                            <h3>Workshop Host</h3>
+                            <p>Creeping for female light yea that lesser cand evening
+                                heaven isn't bearing tree appear </p>
+
                         </div>
                     </div>
                 </div>
@@ -448,7 +504,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <p class="footer-text m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Website template by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                             </div>
                         </div>
