Move apply button to bottom of application panel

--- a/index.html
+++ b/index.html
@@ -214,15 +214,6 @@
         </div>
     </section>
     <!-- team_member part end-->
-    <section class = "service_part our_latest_work padding_top" id = "apply">
-        <div class="container">
-            <div class="row col-lg-12">
-                <div class="single_work apply">
-                    <h2>APPLY NOW!</h2>
-                </div>
-            </div>
-        </div>
-    </section>
     <section class = "service_part padding_top" id = "hacker">
         <div class = "container">
             <div class = "row justify-content-center">
@@ -273,7 +264,7 @@
             </div>
         </div>
     </section>
-    <section class = "service_part section_padding" id = "helper">
+    <section class = "service_part padding_top" id = "helper">
         <div class = "container">
             <div class = "row justify-content-center">
                 <h3 class = "section_tittle text-lg-center">- HELPER -</h3>
@@ -310,6 +301,13 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class = "service_part our_latest_work section_padding" id = "apply">
+        <div class="container">
+            <div class="row justify-content-center">
+                <a href="about.html" class="btn_1">APPLY NOW</a>
             </div>
         </div>
     </section>
