Recolour mobile navbar button

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_service_part">
                         <div class="single_service_part_iner">
-                            <span class="ti-mobile"></span>
+                            <span class="ti-crown"></span>
                             <h3>Mentor</h3>
                             <p>Creeping for female light yea that lesser cand evening
                                 heaven isn't bearing tree appear </p>
@@ -283,7 +283,7 @@
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_service_part">
                         <div class="single_service_part_iner">
-                            <span class="ti-layers"></span>
+                            <span class="ti-user"></span>
                             <h3>Volunteer</h3>
                             <p>Creeping for female light yea that lesser cand evening
                                 heaven isn't bearing tree appear </p>
@@ -293,7 +293,7 @@
                 <div class="col-lg-4 col-sm-6">
                     <div class="single_service_part">
                         <div class="single_service_part_iner">
-                            <span class="ti-lock"></span>
+                            <span class="ti-light-bulb"></span>
                             <h3>Workshop Host</h3>
                             <p>Creeping for female light yea that lesser cand evening
                                 heaven isn't bearing tree appear </p>
@@ -502,7 +502,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <p class="footer-text m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Website template by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Website template by <a href="https://colorlib.com" target="_blank">Colorlib.</a> Icons from Themify Icons.
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
                             </div>
                         </div>
