Fix FAQ and recolour apply section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="css/all.css">
     <!-- style CSS -->
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
@@ -214,7 +215,7 @@
         </div>
     </section>
     <!-- team_member part end-->
-    <section class = "service_part padding_top" id = "hacker">
+    <section class = "service_part padding_top section_bg_2" id = "hacker">
         <div class = "container">
             <div class = "row justify-content-center">
                 <h3 class = "section_tittle text-lg-center">- HACKER -</h3>
@@ -264,13 +265,13 @@
             </div>
         </div>
     </section>
-    <section class = "service_part padding_top" id = "helper">
+    <section class = "service_part padding_top section_bg_2" id = "helper">
         <div class = "container">
             <div class = "row justify-content-center">
                 <h3 class = "section_tittle text-lg-center">- HELPER -</h3>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-sm-6">
+                <div class="col-lg-4 col-sm-6 justify-content-center">
                     <div class="single_service_part">
                         <div class="single_service_part_iner">
                             <span class="ti-crown"></span>
@@ -304,7 +305,7 @@
             </div>
         </div>
     </section>
-    <section class = "service_part our_latest_work section_padding" id = "apply">
+    <section class = "service_part our_latest_work section_padding section_bg_2" id = "apply">
         <div class="container">
             <div class="row justify-content-center">
                 <a href="about.html" class="btn_1">APPLY NOW</a>
@@ -314,7 +315,7 @@
     <!-- service_part part end-->
 
     <!--::blog_part start::-->
-    <section class="blog_part section_padding section_bg_2" id = "faq">
+    <section class="blog_part section_padding" id = "faq">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-5">
@@ -323,107 +324,56 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-6 col-lg-4 col-xl-4">
-                    <div class="single-home-blog">
-                        <div class="card shadow">
-                            <div class="card-body">
-                                <a href="blog.html" class = "dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <h5 class="card-title">What is a hackathon?</h5>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <p class = "dropdown-item">A hackathon is a place where you and hundreds of other people learn, build, and create new technologies <br>
-                                        over the course of one weekend! Hackathons let you try learning a new skill, commit to that <br>
-                                        crazy idea you've never had time for, or make new friendships and strengthen old ones.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+            <div class = "row">
+                <!--first column of FAQ-->
+                <div class="col-lg-6">
+                    <ul class="faq">
+                        <li>
+                            <h3 class="question">Frequently Asked Question?
+                                <div class="plus-minus-toggle collapsed"></div>
+                            </h3>
+                            <div class="answer">Answer. Donec vitae tellus risus. Aenean sed fermentum risus. Phasellus venenatis
+                                ultricies dignissim. Nunc ante lectus, accumsan non porta at. Donec vitae tellus risus. Aenean sed
+                                fermentum risus. Phasellus venenatis ultricies dignissim.</div>
+                        </li>
+                        <li>
+                            <h3 class="question">Frequently Asked Question?
+                                <div class="plus-minus-toggle collapsed"></div>
+                            </h3>
+                            <div class="answer">Answer. Donec vitae tellus risus. Aenean sed fermentum risus. Phasellus venenatis
+                                ultricies dignissim. Nunc ante lectus, accumsan non porta at. Donec vitae tellus risus. Aenean sed
+                                fermentum risus. Phasellus venenatis ultricies dignissim.</div>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-sm-6 col-lg-4 col-xl-4">
-                    <div class="single-home-blog">
-                        <div class="card shadow">
-                            <div class="card-body">
-                                <a href="blog.html" class = "dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <h5 class="card-title">Who can attend?</h5>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <p class = "dropdown-item col-lg-4">vhHacks is open primarily to, and structured for, high school or secondary students. <br>
-                                        However, if you're in middle school, or university, you are welcome to apply as well</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4 col-xl-4">
-                    <div class="single-home-blog">
-                        <div class="card shadow">
-                            <div class="card-body">
-                                <a href="blog.html" class = "dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <h5 class="card-title">What is a hackathon?</h5>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <p class = "dropdown-item">A hackathon is a place where you and hundreds of other people learn, build, and create new technologies <br>
-                                        over the course of one weekend! Hackathons let you try learning a new skill, commit to that <br>
-                                        crazy idea you've never had time for, or make new friendships and strengthen old ones.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4 col-xl-4">
-                    <div class="single-home-blog">
-                        <div class="card shadow">
-                            <div class="card-body">
-                                <a href="blog.html" class = "dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <h5 class="card-title">What is a hackathon?</h5>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <p class = "dropdown-item">A hackathon is a place where you and hundreds of other people learn, build, and create new technologies <br>
-                                        over the course of one weekend! Hackathons let you try learning a new skill, commit to that <br>
-                                        crazy idea you've never had time for, or make new friendships and strengthen old ones.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4 col-xl-4">
-                    <div class="single-home-blog">
-                        <div class="card shadow">
-                            <div class="card-body">
-                                <a href="blog.html" class = "dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <h5 class="card-title">What is a hackathon?</h5>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <p class = "dropdown-item">A hackathon is a place where you and hundreds of other people learn, build, and create new technologies <br>
-                                        over the course of one weekend! Hackathons let you try learning a new skill, commit to that <br>
-                                        crazy idea you've never had time for, or make new friendships and strengthen old ones.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4 col-xl-4">
-                    <div class="single-home-blog">
-                        <div class="card shadow">
-                            <div class="card-body">
-                                <a href="blog.html" class = "dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <h5 class="card-title">What is a hackathon?</h5>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <p class = "dropdown-item">A hackathon is a place where you and hundreds of other people learn, build, and create new technologies <br>
-                                        over the course of one weekend! Hackathons let you try learning a new skill, commit to that <br>
-                                        crazy idea you've never had time for, or make new friendships and strengthen old ones.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
+                <!--second column of FAQ-->
+                <div class="col-lg-6">
+                    <ul class="faq">
+                        <li>
+                            <h3 class="question">Frequently Asked Question?
+                                <div class="plus-minus-toggle collapsed"></div>
+                            </h3>
+                            <div class="answer">Answer. Donec vitae tellus risus. Aenean sed fermentum risus. Phasellus venenatis
+                                ultricies dignissim. Nunc ante lectus, accumsan non porta at. Donec vitae tellus risus. Aenean sed
+                                fermentum risus. Phasellus venenatis ultricies dignissim.</div>
+                        </li>
+                        <li>
+                            <h3 class="question">Frequently Asked Question?
+                                <div class="plus-minus-toggle collapsed"></div>
+                            </h3>
+                            <div class="answer">Answer. Donec vitae tellus risus. Aenean sed fermentum risus. Phasellus venenatis
+                                ultricies dignissim. Nunc ante lectus, accumsan non porta at. Donec vitae tellus risus. Aenean sed
+                                fermentum risus. Phasellus venenatis ultricies dignissim.</div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
     </section>
     <!--::blog_part end::-->
 
+    <!--sponsor section-->
     <!-- footer part start-->
     <footer class="footer-area">
         <div class="container">
