--- a/index.html
+++ b/index.html
@@ -109,11 +109,7 @@
                                 <div class="single_work_demo">
                                     <h5>About Us</h5>
                                     <h3>What is vhHacks?</h3>
-                                    <p class = "about-home-text">Place isn't heaven firmament divided shall fruitful bring bring may midst
-                                        every a night dry herb. Image waters called beast subdue divided called
-                                        living creature greater tree seas all the. Hath multiply female you're
-                                        male likeness his made open beast seas living moved, form.
-                                        Void stars you our dominion </p>
+                                    <p class = "about-home-text">THIS IS TEST TEXT THIS MEANS THE SITE NOW OPERATES ON A CUSTOM DOMAIN </p>
                                 </div>
                             </div>
                             <div class = "offset-lg-1 col-lg-4 col-md-6">
